@@ -1,3 +1,12 @@
+Tue Oct 07 08:49:51 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	* src/QGaimBuddyList.h:
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	  - Now using signals to remove code duplicate between QGaimBuddyList
+	    and QGaimBListWindow.
+
 Mon Oct 06 22:05:31 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
